# option_pricer_DLC

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-base.txt  requirements-linux-cuda.txt  requirements-mac-metal.txt  requirements.txt
.gcloud/: .last_survey_prompt.yaml  .last_update_check.json  .metricsUUID  access_tokens.db  active_config  credentials.db  hidden_gcloud_config_universe_descriptor_data_cache_configs.db
.gcloud/configurations/: config_nyu  config_yunian
.github/workflows/: backend-ci.yml  deploy-backend-appengine.yml  deploy-backend.yml  deploy-frontend-appengine.yml  deploy-frontend.yml  frontend-ci.yml
backend/: __init__.py  main.py  requirements.txt
backend/core/: config.py  iap.py
backend/schemas/: backtesting.py  calibration.py  common.py  data.py  market.py  pricing.py  rl_hedging.py  simulation.py  smile.py  surface.py
backend/services/: advanced_pricing.py  backtesting_service.py  calibration_service.py  data_service.py  market_service.py  pricing_service.py  rl_hedging_service.py  smile_service.py  surface_service.py
config/: data_sources.yaml  hedging.yaml
data/: calibration_pmeasure_heston.json
data/raw/: AAPL_option_chain_20251106.csv
deployment/appengine/: backend.yaml  frontend.yaml
deployment/cloudbuild/: backend-appengine.yaml  backend.yaml  frontend-appengine.yaml  frontend.yaml
deployment/env/: backend.env
docs/: API.md  DEPLOYMENT.md  LOCAL_SETUP.md
examples/: demo_rendering.py
frontend/: .env.local.example  .env.production  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
notebooks/: 01_explore_option_chains.ipynb  01_option_chains.ipynb  02_implied_vol.ipynb  03_greeks_analysis.ipynb  04_delta_hedging.ipynb  05_backtest.ipynb
scripts/: build_surface.py  pull_data.py  run_backtest.py
src/options_desk/: __init__.py
tests/: test_calibration_service.py  test_particle_filters.py  test_pricing.py  test_rl_envs.py  test_sim.py
(+208 files in other folders)
